# nrf7002dk-aht20-sensor

./: CMakeLists.txt  README.md  nrf7002dk_nrf5340_cpuapp.overlay  prj.conf
include/: aht20_controller.h  i2c_controller.h
src/: aht20_controller.c  i2c_controller.c  main.c
